# wasmify-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/contracts/: abi.rs  contract_update.rs  deploy.rs  gas.rs  interaction.rs  mod.rs  monitor.rs  watch.rs
src/framework/: async_operations.rs  init.rs  logging.rs  mod.rs  optimize.rs  run.rs
tests/: integration_test.rs
