[package]
name = "wasmify-rs"  # Crates.io üzerinde yayınlanacak isim
version = "0.1.0"  # Versiyon numarası
authors = ["zengi <zenginureddin1@gmail.com>"]  # Kendi email adresinizi girin
edition = "2021"
description = "A high-performance Rust library for smart contract management and gas optimization."
license = "MIT"  # Lisans türü
repository = "https://github.com/nzengi/wasmify-rs"  # GitHub projesi varsa ekleyin
documentation = "https://docs.rs/wasmify-rs"  # Rust dokümantasyon adresi
homepage = "https://github.com/nzengi/wasmify-rs"  # Projenin ana sayfa adresi
keywords = ["wasm", "rust", "smart-contract", "gas-optimization", "blockchain"]
categories = ["cryptography", "blockchain", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
web3 = "0.15.0"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
wasm-bindgen = "0.2.78"
anyhow = "1.0"
chrono = "0.4"