[package]
name = "wasmify-rs"
version = "0.1.1"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A Rust-based WebAssembly smart contract platform for Ethereum."
license = "MIT"
repository = "https://github.com/yourusername/spawn_swap"
documentation = "https://docs.rs/spawn_swap"
keywords = ["ethereum", "smart-contract", "webassembly", "rust"]
categories = ["cryptography", "web-programming"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web3 = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
chrono = "0.4"
log = { version = "0.4.22", optional = true }
env_logger = { version = "0.9", optional = true }

# Optional dependencies for specific use cases
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
async = ["tokio", "serde_json"]
logging = ["log", "env_logger"]

[build-dependencies]
cargo = "0.52"

[profile.release]
opt-level = "z"

[[bin]]
name = "wasmify_rs"
path = "src/main.rs"

